public/themes/reviactyl/css/pterodactyl.css
/* ... */
.text-gray {
    color: #9aa5b1 !important;
}

.text-green {
    color: #00a65a !important;
}

.text-muted {
    color: #9aa5b1 !important;
}

.text-danger {
    color: #ff1c00;
}

.btn-success {
    background-color: #189a1c;
    border-color: #0f8513;
}

.btn.btn-green:hover {
    background-color: #0f8513;
    border-color: #0e7717;
}

.btn-primary {
    background-color: #0967d3;
    border-color: #0550b3;
}

.btn.btn-primary:hover {
    background-color: #0550b3;
    border-color: #0345a0;
}

.content-header>.breadcrumb>li>a {
    color: #cad1d8;
}

.breadcrumb>.active {
    color: #cad1d8;
}

.h1 .small, .h1 small, .h2 .small, .h2 small, .h3 .small, .h3 small, .h4 .small, .h4 small, .h5 .small, .h5 small, .h6 .small, .h6 small, h1 .small, h1 small, h2 .small, h2 small, h3 .small, h3 small, h4 .small, h4 small, h5 .small, h5 small, h6 .small, h6 small {
    color: #cad1d8;
}

.table>thead>tr>th {
    border-bottom: 2px solid #4d5b69;
}

a {
    color: #007eff;
}

.nav-tabs-custom>.nav-tabs>li>a {
    color: #9aa5b1;
}

.input-group .input-group-addon {
    border-color: #606d7b;
    background-color: #515f6cbb;
    color: #cad1d8;
}

.select2-container--default .select2-selection--single .select2-selection__rendered {
    color: #cad1d8;
}

.btn-default {
    background-color: #33404d;
    color: #cad1d8;
    border-color: #606d7b;
}

.select2-results__option {
    background-color: #b5bcc1;
    color: #444;
}

.select2-container--default .select2-results__option--highlighted[aria-selected] {
    background-color: #3c8dbc;
}

.nav-tabs-custom>.nav-tabs>li.active>a, .nav-tabs-custom>.nav-tabs>li.active:hover>a {
     background-color: #101216;
}

.select2-container--default .select2-results__option[aria-selected=true], .select2-container--default .select2-results__option[aria-selected=true]:hover {
    color: #fff;
}

.select2-dropdown {
    background-color: #515f6cbb;
    border: 1px solid #606d7b;
}
.select2-container--default.select2-container--focus .select2-selection--multiple, .select2-container--default .select2-search--dropdown .select2-search__field {
    border-color: #d2d6de !important;
    background-color: #515f6cbb;
}

.select2-container--default .select2-results__option--highlighted[aria-selected] {
    background-color: #099aa5;
}

a {
    color: #288afb;
}

a:hover {
    color: #206ec7;
}

.well {
    min-height: 20px;
    padding: 19px;
    margin-bottom: 20px;
    background-color: #515f6cbb;
    border: 1px solid #606d7b;
}

.well-lg {
    padding: 24px;
}

.well-sm {
    padding: 9px;
}

.small-box h3, .small-box p {
    color: #c3c3c3;
}

.small-box-footer {
    color: #288afb;
}

.small-box .icon {
    color: #cad1d8;
}

